fixed overflow-y addTask

--- a/css/styleadd.css
+++ b/css/styleadd.css
@@ -79,7 +79,8 @@ body {
 
 .main-content {
   display: flex;
-  height: 932px;
+  height: 100vh;
+  overflow: hidden;
 }
 
 .tasks {
